RESOLVED FIXED111863
[Stable][GTK][WK2] Fix compilation warning missing-field-initializers in webkit-2.0 stable branch
https://bugs.webkit.org/show_bug.cgi?id=111863
Summary [Stable][GTK][WK2] Fix compilation warning missing-field-initializers in webk...
Manuel Rego Casasnovas
Reported 2013-03-08 08:50:27 PST
The warning is: ../../Source/WebKit2/UIProcess/API/gtk/WebKitUIClient.cpp:211:5: warning: missing initializer for member 'WKPageUIClient::unavailablePluginButtonClicked' [-Wmissing-field-initializers]
Attachments
Patch (1.48 KB, patch)
2013-03-08 08:54 PST, Manuel Rego Casasnovas
no flags
Manuel Rego Casasnovas
Comment 1 2013-03-08 08:52:08 PST
(In reply to comment #0) > The warning is: > ../../Source/WebKit2/UIProcess/API/gtk/WebKitUIClient.cpp:211:5: warning: missing initializer for member 'WKPageUIClient::unavailablePluginButtonClicked' [-Wmissing-field-initializers] Sorry this one is in master not in the stable branch, the one in the stable branch is: ../../Source/WebKit2/UIProcess/API/gtk/WebKitUIClient.cpp:211:5: warning: missing initializer for member 'WKPageUIClient::pluginLoadPolicy' [-Wmissing-field-initializers]
Manuel Rego Casasnovas
Comment 2 2013-03-08 08:54:06 PST
WebKit Review Bot
Comment 3 2013-03-08 08:59:48 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Martin Robinson
Comment 4 2013-03-08 09:09:29 PST
Comment on attachment 192233 [details] Patch Looks good to me.
Carlos Garcia Campos
Comment 5 2013-03-08 09:33:17 PST
Committed in the stable branch http://trac.webkit.org/changeset/145234
Manuel Rego Casasnovas
Comment 6 2013-03-08 13:08:04 PST
Adding WK2 owners to CC.
Benjamin Poulain
Comment 7 2013-03-08 13:59:40 PST
Comment on attachment 192233 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=192233&action=review Please fix the name before landing. > Source/WebKit2/UIProcess/API/gtk/WebKitUIClient.cpp:211 > + 0, // pluginLoadPolicy In my repository, this callback is named "unavailablePluginButtonClicked"
Build Bot
Comment 8 2013-03-09 01:26:58 PST
Comment on attachment 192233 [details] Patch Attachment 192233 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-commit-queue.appspot.com/results/17060461 New failing tests: fast/css/sticky/inline-sticky.html
WebKit Review Bot
Comment 9 2013-03-09 01:52:58 PST
Comment on attachment 192233 [details] Patch Clearing flags on attachment: 192233 Committed r145308: <http://trac.webkit.org/changeset/145308>
WebKit Review Bot
Comment 10 2013-03-09 01:53:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.