[GTK][WK2] Fix compilation warning missing-field-initializers in webkit-2.0 stable branch https://bugs.webkit.org/show_bug.cgi?id=111863

Patch by Manuel Rego Casasnovas <rego@igalia.com> on 2013-03-09
Reviewed by Benjamin Poulain.

* UIProcess/API/gtk/WebKitUIClient.cpp:
(attachUIClientToView): Include missing initializer for pluginLoadPolicy.

Canonical link: https://commits.webkit.org/130277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145308 268f45cc-cd09-0410-ab3c-d52691b4dbfc